--- a/programs/collateralVault/Cargo.toml
+++ b/programs/collateralVault/Cargo.toml
@@ -21,5 +21,5 @@ idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
 anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
 anchor-spl = "0.31.1"
 
-bytemuck = { version = "1.17.1", features = ["derive"] }
+bytemuck = { version = "1.17.1", features = ["derive", "min_const_generics" ] }
 
